繁體中文化

--- a/fabric/1.0.md
+++ b/fabric/1.0.md
@@ -1,57 +1,57 @@
 ## 使用 1.0 版本
 
-Hyperledger Fabric 1.0 版本整体 [重新设计了架构](https://github.com/hyperledger/fabric/blob/master/proposals/r1/Next-Consensus-Architecture-Proposal.md)，新的设计可以实现更好的扩展性和安全性。
+Hyperledger Fabric 1.0 版本整體 [重新設計了架構](https://github.com/hyperledger/fabric/blob/master/proposals/r1/Next-Consensus-Architecture-Proposal.md)，新的設計可以實現更好的擴展性和安全性。
 
-### 下载 Compose 模板文件
+### 下載 Compose 模板文件
 
 ```sh
 $ git clone https://github.com/yeasy/docker-compose-files
 ```
 
-进入 `hyperledger/1.0` 目录，查看包括若干模板文件，功能如下。
+進入 `hyperledger/1.0` 目錄，查看包括若干模板文件，功能如下。
 
 文件 | 功能 
 -- | --
-orderer-base.yaml | orderer 节点的基础服务模板
-peer-base.yaml | peer 节点的基础服务模板
-docker-compose-base.yaml | 包含 orderer 和 peers 组织结构的基础服务模板
-docker-compose-1peer.yaml | 使用自定义的 `channel` 启动一个最小化的环境，包括 1 个 peer 节点、1 个 orderer 节点、1 个 CA 节点、1 个 cli 节点
-docker-compose-2orgs-4peers.yaml | 使用自定义的 `channel` 启动一个环境，包括 4 个 peer 节点、1 个 orderer 节点、1 个 CA 节点、1 个 cli 节点
-docker-compose-2orgs-4peers-couchdb.yaml | 启动一个带有 couchdb 服务的网络环境
-docker-compose-2orgs-4peers-event.yaml | 启动一个带有 event 事件服务的网络环境
-e2e_cli/channel-artifacts | 存放创建 orderer, channel, anchor peer 操作时的配置文件
-e2e_cli/crypto-config | 存放 orderer 和 peer 相关证书
-e2e_cli/example | 用来测试的 chaincode
-scripts/setup_Docker.sh | 安装并配置 dokcer 和 docker-compose
-scripts/download_images.sh | 下载依赖镜像
-scripts/start_fabric.sh | 快速启动一个fabric 网络
-scripts/initialize.sh | 自动化测试脚本，用来初始化 `channel` 和 `chaincode`
-scripts/test_4peers.sh | 自动化测试脚本，用来执行 chaincode 操作
-scripts/cleanup_env.sh | 容器，镜像自动清除脚本
-scripts/test_1peer.sh | 测试1个peer网络的自动化脚本
-kafka/ |基于kafka 的 ordering 服务
+orderer-base.yaml | orderer 節點的基礎服務模板
+peer-base.yaml | peer 節點的基礎服務模板
+docker-compose-base.yaml | 包含 orderer 和 peers 組織結構的基礎服務模板
+docker-compose-1peer.yaml | 使用自定義的 `channel` 啟動一個最小化的環境，包括 1 個 peer 節點、1 個 orderer 節點、1 個 CA 節點、1 個 cli 節點
+docker-compose-2orgs-4peers.yaml | 使用自定義的 `channel` 啟動一個環境，包括 4 個 peer 節點、1 個 orderer 節點、1 個 CA 節點、1 個 cli 節點
+docker-compose-2orgs-4peers-couchdb.yaml | 啟動一個帶有 couchdb 服務的網絡環境
+docker-compose-2orgs-4peers-event.yaml | 啟動一個帶有 event 事件服務的網絡環境
+e2e_cli/channel-artifacts | 存放創建 orderer, channel, anchor peer 操作時的配置文件
+e2e_cli/crypto-config | 存放 orderer 和 peer 相關證書
+e2e_cli/example | 用來測試的 chaincode
+scripts/setup_Docker.sh | 安裝並配置 dokcer 和 docker-compose
+scripts/download_images.sh | 下載依賴鏡像
+scripts/start_fabric.sh | 快速啟動一個fabric 網絡
+scripts/initialize.sh | 自動化測試腳本，用來初始化 `channel` 和 `chaincode`
+scripts/test_4peers.sh | 自動化測試腳本，用來執行 chaincode 操作
+scripts/cleanup_env.sh | 容器，鏡像自動清除腳本
+scripts/test_1peer.sh | 測試1個peer網絡的自動化腳本
+kafka/ |基於kafka 的 ordering 服務
 
-### 安装 Docker 和 docker-compose 
+### 安裝 Docker 和 docker-compose 
 
-docker 及 docker-compose 可以自行手动安装。也可以通过 hyperledger/1.0/scripts 提供的 `setup_Docker.sh` 脚本自动安装。
+docker 及 docker-compose 可以自行手動安裝。也可以通過 hyperledger/1.0/scripts 提供的 `setup_Docker.sh` 腳本自動安裝。
 
 ```bash
 $ bash scripts/setup_Docker.sh
 ```
 
-### 获取 Docker 镜像
+### 獲取 Docker 鏡像
 
-Docker 镜像可以自行从源码编译（`make docker`），或从 DockerHub 仓库下载。
+Docker 鏡像可以自行從源碼編譯（`make docker`），或從 DockerHub 倉庫下載。
 
-#### 执行脚本获取
-直接执行 hyperledger/1.0/scripts 提供的 `download_images.sh` 脚本获取。
+#### 執行腳本獲取
+直接執行 hyperledger/1.0/scripts 提供的 `download_images.sh` 腳本獲取。
 
 ```bash
 $ bash scripts/download_images.sh
 ```
 
-#### 从官方仓库获取
-从社区 DockerHub 仓库下载。
+#### 從官方倉庫獲取
+從社區 DockerHub 倉庫下載。
 
 ```bash
 # pull fabric images
@@ -80,10 +80,10 @@ docker tag hyperledger/fabric-orderer:$ARCH-$IMG_TAG hyperledger/fabric-orderer
 docker tag hyperledger/fabric-ca:$ARCH-$IMG_TAG hyperledger/fabric-ca
 docker tag hyperledger/fabric-tools:$ARCH-$IMG_TAG hyperledger/fabric-tools
 ```
-#### 从第三方仓库获取
-这里也提供了调整（基于 golang:1.8 基础镜像制作）后的第三方镜像，与社区版本功能是一致的。
+#### 從第三方倉庫獲取
+這裡也提供了調整（基於 golang:1.8 基礎鏡像製作）後的第三方鏡像，與社區版本功能是一致的。
 
-通过如下命令拉取相关镜像，并更新镜像别名。
+通過如下命令拉取相關鏡像，並更新鏡像別名。
 
 ```bash
 $ ARCH=x86_64
@@ -111,9 +111,9 @@ $ docker tag yeasy/hyperledger-fabric-peer:$IMG_VERSION hyperledger/fabric-peer 
   && docker tag hyperledger/fabric-kafka:$ARCH-$IMG_VERSION hyperledger/fabric-kafka
 ```
 
-### 启动 fabric 1.0 网络
+### 啟動 fabric 1.0 網絡
 
-通过如下命令快速启动。
+通過如下命令快速啟動。
 
 ```sh
 $ bash scripts/start_fabric.sh
@@ -125,9 +125,9 @@ $ bash scripts/start_fabric.sh
 $ docker-compose -f docker-compose-2orgs-4peers.yaml up
 ```
 
-注意输出日志中无错误信息。
+注意輸出日誌中無錯誤信息。
 
-此时，系统中包括 7 个容器。
+此時，系統中包括 7 個容器。
 
 ```bash
 $ docker ps -a
@@ -141,20 +141,20 @@ cd21cfff8298        hyperledger/fabric-peer      "peer node start --pe"   22 sec
 47ce30077276        hyperledger/fabric-peer      "peer node start --pe"   22 seconds ago      Up 20 seconds       7050/tcp, 7052/tcp, 7054-7059/tcp, 0.0.0.0:8051->7051/tcp, 0.0.0.0:8053->7053/tcp     peer1.org1.example.com
 ```
 
-### 测试网络
+### 測試網絡
 
-启动 fabric 网络后，可以进行 chaincode 操作，验证网络是否启动正常。
+啟動 fabric 網絡後，可以進行 chaincode 操作，驗證網絡是否啟動正常。
 
-进入到 cli 容器里面，执行 `initialize.sh` 和 `test_4peers.sh` 脚本。
+進入到 cli 容器裡面，執行 `initialize.sh` 和 `test_4peers.sh` 腳本。
 
-通过如下命令进入容器 cli 并执行测试脚本。
+通過如下命令進入容器 cli 並執行測試腳本。
 
 ```bash
 $ docker exec -it fabric-cli bash
 $ bash ./scripts/initialize.sh
 ```
 
-注意输出日志无错误提示，最终返回结果应该为：
+注意輸出日誌無錯誤提示，最終返回結果應該為：
 
 ```bash
 UTC [main] main -> INFO 00c Exiting.....
@@ -171,13 +171,13 @@ UTC [main] main -> INFO 00c Exiting.....
 |_____| |_| \_| |____/ 
 ```
 
-之后同样是在 `cli` 容器里执行 `test_4peers.sh` 脚本
+之後同樣是在 `cli` 容器裡執行 `test_4peers.sh` 腳本
 
 ```bash
 $ bash ./scripts/test_4peers.sh
 ```
 
-输出日志无错误提示，最终返回结果应该为：
+輸出日誌無錯誤提示，最終返回結果應該為：
 
 ```bash
 Query Result: 80
@@ -194,4 +194,4 @@ UTC [main] main -> INFO 008 Exiting.....
 |_____| |_| \_| |____/ 
 ```
 
-至此，整个网络启动并验证成功。
+至此，整個網絡啟動並驗證成功。
