--- a/fabric/1.0.md
+++ b/fabric/1.0.md
@@ -17,18 +17,18 @@ peer-base.yaml | peer 節點的基礎服務模板
 docker-compose-base.yaml | 包含 orderer 和 peers 組織結構的基礎服務模板
 docker-compose-1peer.yaml | 使用自定義的 `channel` 啟動一個最小化的環境，包括 1 個 peer 節點、1 個 orderer 節點、1 個 CA 節點、1 個 cli 節點
 docker-compose-2orgs-4peers.yaml | 使用自定義的 `channel` 啟動一個環境，包括 4 個 peer 節點、1 個 orderer 節點、1 個 CA 節點、1 個 cli 節點
-docker-compose-2orgs-4peers-couchdb.yaml | 啟動一個帶有 couchdb 服務的網絡環境
-docker-compose-2orgs-4peers-event.yaml | 啟動一個帶有 event 事件服務的網絡環境
+docker-compose-2orgs-4peers-couchdb.yaml | 啟動一個帶有 couchdb 服務的網路環境
+docker-compose-2orgs-4peers-event.yaml | 啟動一個帶有 event 事件服務的網路環境
 e2e_cli/channel-artifacts | 存放創建 orderer, channel, anchor peer 操作時的配置文件
 e2e_cli/crypto-config | 存放 orderer 和 peer 相關證書
 e2e_cli/example | 用來測試的 chaincode
 scripts/setup_Docker.sh | 安裝並配置 dokcer 和 docker-compose
 scripts/download_images.sh | 下載依賴鏡像
-scripts/start_fabric.sh | 快速啟動一個fabric 網絡
+scripts/start_fabric.sh | 快速啟動一個fabric 網路
 scripts/initialize.sh | 自動化測試腳本，用來初始化 `channel` 和 `chaincode`
 scripts/test_4peers.sh | 自動化測試腳本，用來執行 chaincode 操作
 scripts/cleanup_env.sh | 容器，鏡像自動清除腳本
-scripts/test_1peer.sh | 測試1個peer網絡的自動化腳本
+scripts/test_1peer.sh | 測試1個peer網路的自動化腳本
 kafka/ |基於kafka 的 ordering 服務
 
 ### 安裝 Docker 和 docker-compose 
@@ -111,7 +111,7 @@ $ docker tag yeasy/hyperledger-fabric-peer:$IMG_VERSION hyperledger/fabric-peer 
   && docker tag hyperledger/fabric-kafka:$ARCH-$IMG_VERSION hyperledger/fabric-kafka
 ```
 
-### 啟動 fabric 1.0 網絡
+### 啟動 fabric 1.0 網路
 
 通過如下命令快速啟動。
 
@@ -141,9 +141,9 @@ cd21cfff8298        hyperledger/fabric-peer      "peer node start --pe"   22 sec
 47ce30077276        hyperledger/fabric-peer      "peer node start --pe"   22 seconds ago      Up 20 seconds       7050/tcp, 7052/tcp, 7054-7059/tcp, 0.0.0.0:8051->7051/tcp, 0.0.0.0:8053->7053/tcp     peer1.org1.example.com
 ```
 
-### 測試網絡
+### 測試網路
 
-啟動 fabric 網絡後，可以進行 chaincode 操作，驗證網絡是否啟動正常。
+啟動 fabric 網路後，可以進行 chaincode 操作，驗證網路是否啟動正常。
 
 進入到 cli 容器裡面，執行 `initialize.sh` 和 `test_4peers.sh` 腳本。
 
@@ -194,4 +194,4 @@ UTC [main] main -> INFO 008 Exiting.....
 |_____| |_| \_| |____/ 
 ```
 
-至此，整個網絡啟動並驗證成功。
+至此，整個網路啟動並驗證成功。
